# rustwm

./: Cargo.toml  shell.nix
src/: main.rs  state.rs
src/backends/: winit.rs
src/config/: mod.rs  types.rs
src/handlers/: input.rs  mod.rs  xdg_shell.rs
src/utils/: binarytree.rs  focus.rs  mod.rs  render.rs  tiling.rs  workspace.rs
